metadata/unpackaged/objects/Mass_Update_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value_CBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Value CBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Value_Date_Time__c</fullName>
        <label>Filter Value Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Filter_Value_Date__c</fullName>
        <label>Filter Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filter_Value_Nbr__c</fullName>
        <label>Filter Value Nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <label>Mass Update</label>
        <referenceTo>Mass_Update__c</referenceTo>
        <relationshipLabel>Mass Update Criterias</relationshipLabel>
        <relationshipName>R00N70000002HPIbEAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>==</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000002HfPiEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mass Update Criteria</label>
    <nameField>
        <displayFormat>MUC{000000}</displayFormat>
        <label>Mass Update Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Update Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>